<resources>
    <string name="app_name">YiJianZhi</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_recruit">RecruitActivity</string>
    <string name="title_activity_shanping">ShanpingActivity</string>
    <string name="title_activity_zhu_ce">ZhuCeActivity</string>
    <!-- 注册页面 -->
    <string name="hint_username">请输入手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="send_verification_code">发送验证码</string>
    <string name="consent_clause">同意条款</string>
    <string name="input_verification_code">请输入验证码</string>
<<<<<<< HEAD
    <string name="title_activity_splashscreen">Splashscreen</string>
    <string name="title_activity_guidepage">Guidepage</string>
    <string name="my_zhuangtai">登录/注册</string>
=======
<<<<<<< HEAD
<<<<<<< HEAD
    <string name="title_activity_splashscreen">Splashscreen</string>
    <string name="title_activity_guidepage">Guidepage</string>
    <string name="my_zhuangtai">登录/注册</string>
=======

    <string name="title_activity_splashscreen">Splashscreen</string>
    <string name="title_activity_guidepage">Guidepage</string>

    <string name="my_zhuangtai">登录/注册</string>
<<<<<<< HEAD
>>>>>>> 2a2a7fefd8932a22b6aa17a7a8edeed34dafe47f
=======
    <string name="first_remen">热门招聘</string>
    <string name="first_remen1">小伙伴们都在找这些</string>
    <string name="first_fujin">附近招聘</string>
    <string name="first_fujin1">附近有什么招聘</string>
    <string name="first_xianshi">限时招聘</string>
    <string name="first_xianshi1">亲，再不来就没啦！</string>
    <string name="first_gengduo">更多</string>
    <string name="first_gengduo1">更多功能</string>
    <string name="first_tuijian">推荐招聘</string>

>>>>>>> 3a7d56f9ecb43233e5365954181583a087f5c405
=======

>>>>>>> 8d2af4e647210deddeb29ff9eff44813844b8a7a
>>>>>>> 8320a366cf48d22fb605320eaffb0589aaed14ee
>>>>>>> f07a34e2164fc5c52eef47ed6fd2896edaaff7cc

</resources>
